# aki

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PLAN_14_DAYS.md  SPEC.md  agent-profiles.md  demo-script.md  demo.md  devpost-description.md  integration.md  troubleshooting.md
docs/audits/: 2026-07-05-qwen-hackathon-memory-agent-audit.md
docs/plans/: aki-implementation-plan-2026-06-27.md
docs/sdd/: README.md  apply-progress.md  design.md  explore-ecosystem.md  explore.md  proposal.md  spec.md  tasks.md  vision.md
docs/submission/: README.md  checklist.md  diagram.html  story.md  summary.md  video-script.md
docs/superpowers/specs/: 2026-07-01-aki-cockpit-operational-design.md  2026-07-09-aki-sanitizer-design.md
openspec/: config.yaml
openspec/changes/session-persistence/: design.md  tasks.md
openspec/changes/web-ui-cockpit/: design.md  tasks.md  verify-report.md
openspec/specs/agent-scaffolding-clarification/: spec.md
openspec/specs/cockpit/: project-registry.md  web-server.md
openspec/specs/configurable-iteration-budget/: spec.md
openspec/specs/project-metadata-store/: spec.md
openspec/specs/sdd-scaffolding-flow-suggestion/: spec.md
openspec/specs/session-persistence/: spec.md
src/agentos/: __init__.py
src/agentos/agent/: core.py
src/agentos/agents/: __init__.py  profile_store.py  profiles.py  registry.py
src/agentos/cli/: cockpit.py  main.py  mcp_hosts.py  update.py
src/agentos/cockpit/: navigation.py  registry.py
src/agentos/core/: config.py  project_breadcrumb.py
src/agentos/mcp/: __init__.py  project.py  server.py  tools.py
src/agentos/memory/: capsule.py  database.py  models.py  repository.py
tests/: conftest.py
tests/integration/: test_agent_profile_runtime.py  test_delegation_runtime.py  test_repository.py
tests/unit/: test_agent_destructive_gate.py  test_agent_exhaustion.py  test_agent_gate_helpers.py  test_agent_git_bootstrap_flow.py  test_agent_new_product_chat_wiring.py  test_agent_new_product_suggestion.py  test_agent_new_product_suggestion_exclusions.py  test_agent_profiles.py  test_agent_remember_offload.py  test_agent_should_suggest_sdd_flow.py  test_agent_status.py  test_agent_tool_unwrapping.py  test_assemble_context_reserved_filter.py  test_audit_base.py  test_audit_deep.py  test_audit_passes.py  test_audit_report.py  test_build_messages_checkpoint.py  test_build_messages_git_intent.py  test_build_messages_scaffolding.py  test_chat_checkpoint_write.py  test_cli_audit.py  test_cli_chat.py  test_cli_error_messages.py  test_cli_global_config.py  test_cli_project_resolution.py  test_cli_recall.py  test_cli_salvage.py  test_cli_session_persistence.py  test_cli_session_resolution.py  test_cli_sessions_and_help.py  test_cli_setup.py  test_cli_update.py  test_cockpit.py  test_config.py  test_config_credentials.py  test_config_env_roots.py  test_config_resolve.py  test_doctor.py  test_extraction_tolerance.py  (+33 more)
(+126 files in other folders)
