[project]
name = "aki-memory"
version = "0.1.0"
description = "Aki is an AI agent for portable project memory, powered by Qwen and delivered through MCP"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Akicoders"}
]
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    # HTTP / API
    "httpx>=0.27",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    # Database
    "sqlalchemy>=2.0",
    "sqlite-utils>=3.37",
    "alembic>=1.13",
    # Embeddings / Vector
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    # Qwen / AI
    "openai>=1.37",  # Qwen Cloud compatible
    # MCP server
    "mcp>=1.2",
    # Utils
    "orjson>=3.10",
    "python-dateutil>=2.9",
    "croniter>=2.0",
    # Skills runtime
    "gitpython>=3.1",
    "watchdog>=4.0",
]

[project.scripts]
agentos = "agentos.cli.main:app"
aki = "agentos.cli.main:app"

[project.urls]
Homepage = "https://github.com/Akicoders/aki"
Repository = "https://github.com/Akicoders/aki"
Issues = "https://github.com/Akicoders/aki/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "black>=24.4",
    "isort>=5.13",
]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "faker>=27.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=1.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentos*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "C4", "C90"]
ignore = ["C901", "C416"]
fixable = ["ALL"]
unfixable = ["T201", "T203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["agentos"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src/agentos"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError"]
show_missing = true
precision = 2

[tool.pre-commit-hooks]
# See .pre-commit-config.yaml for actual hooks
